--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Spring2025",
     "scheme": "todoapp",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
