Feat: Integrate image picker functionality and update input handling to include image URI

--- a/app.json
+++ b/app.json
@@ -26,7 +26,15 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "The app needs access to your camera.",
+          "photosPermission": "The app accesses your photos to take pyotos and add them to your goals."
+
+        }
+      ]
     ]
   }
 }
