--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.3.1",
     "react-native": "^0.76.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "expo-location": "~18.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
