--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "^0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-location": "~18.0.8"
+    "expo-location": "~18.0.8",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
