--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "expo-constants": "~17.0.8",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.9",
+    "expo-module-scripts": "^4.0.4",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
     "react": "18.3.1",
     "react-native": "0.76.8",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-location": "~18.0.9",
     "react-native-maps": "1.18.0",
-    "expo-notifications": "~0.29.14"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
